k8s/apps/aws-lbc/base/namespace.aws-load-balancer-controller.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: aws-load-balancer-controller
  labels:
    app.kubernetes.io/name: aws-load-balancer-controller
