k8s/apps/aws-lbc/base/service.aws-load-balancer-webhook-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: aws-load-balancer-webhook-service
  namespace: aws-load-balancer-controller
  labels:
    app.kubernetes.io/name: aws-load-balancer-controller
    app.kubernetes.io/component: webhook
    prometheus.io/service-monitor: "false"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: aws-load-balancer-controller
  ports:
  - name: webhook-server
    port: 443
    targetPort: webhook-server
