k8s/apps/aws-lbc/base/mutatingWebhookConfiguration.aws-load-balancer-webhook.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: aws-load-balancer-webhook
  labels:
    app.kubernetes.io/name: aws-load-balancer-controller
  annotations:
    cert-manager.io/inject-ca-from: aws-load-balancer-controller/aws-load-balancer-serving-cert
webhooks:
- name: mpod.elbv2.k8s.aws
  clientConfig:
    service:
      name: aws-load-balancer-webhook-service
      namespace: aws-load-balancer-controller
      path: /mutate-v1-pod
  failurePolicy: Ignore
  sideEffects: None
  admissionReviewVersions:
  - v1beta1
  namespaceSelector:
    matchExpressions:

    - key: elbv2.k8s.aws/pod-readiness-gate-inject
      operator: In
      values:
      - enabled

  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - aws-load-balancer-controller
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
- name: quicid.elbv2.k8s.aws
  clientConfig:
    service:
      name: aws-load-balancer-webhook-service
      namespace: aws-load-balancer-controller
      path: /mutate-v1-pod-server-id
  failurePolicy: Fail
  sideEffects: None
  admissionReviewVersions:
  - v1beta1
  namespaceSelector:
    matchExpressions:

    - key: elbv2.k8s.aws/quic-server-id-inject
      operator: In
      values:
      - enabled

  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - aws-load-balancer-controller
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
- name: mservice.elbv2.k8s.aws
  clientConfig:
    service:
      name: aws-load-balancer-webhook-service
      namespace: aws-load-balancer-controller
      path: /mutate-v1-service
  failurePolicy: Fail
  sideEffects: None
  admissionReviewVersions:
  - v1beta1
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - aws-load-balancer-controller
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - services
- name: alb-target-control.namespace.elbv2.k8s.aws
  clientConfig:
    service:
      name: aws-load-balancer-webhook-service
      namespace: aws-load-balancer-controller
      path: /mutate-alb-target-control-namespace-v1-pod
  failurePolicy: Fail
  sideEffects: None
  admissionReviewVersions:
  - v1beta1
  namespaceSelector:
    matchExpressions:
    - key: elbv2.k8s.aws/alb-target-control-agent-injection
      operator: In
      values:
      - enabled
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - aws-load-balancer-controller
    - key: elbv2.k8s.aws/alb-target-control-agent-inject
      operator: NotIn
      values:
      - "false"
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
- name: alb-target-control.object.elbv2.k8s.aws
  clientConfig:

    service:
      name: aws-load-balancer-webhook-service
      namespace: aws-load-balancer-controller
      path: /mutate-alb-target-control-object-v1-pod
  failurePolicy: Fail
  sideEffects: None
  admissionReviewVersions:
  - v1beta1
  namespaceSelector:
    matchExpressions:
    - key: elbv2.k8s.aws/alb-target-control-agent-injection
      operator: DoesNotExist
      values: []
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: NotIn
      values:
      - aws-load-balancer-controller
    - key: elbv2.k8s.aws/alb-target-control-agent-inject
      operator: In
      values:
      - "true"
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
- name: mtargetgroupbinding.elbv2.k8s.aws
  clientConfig:

    service:
      name: aws-load-balancer-webhook-service
      namespace: aws-load-balancer-controller
      path: /mutate-elbv2-k8s-aws-v1beta1-targetgroupbinding
  failurePolicy: Fail
  sideEffects: None
  admissionReviewVersions:
  - v1beta1
  rules:
  - apiGroups:
    - elbv2.k8s.aws
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - targetgroupbindings
